Add `getEventsForSeriesByYear` API endpoint and DTO for event responses